# RayTracing

./: .gitignore  Cargo.toml  README.md  path_0.csv  path_output.csv  plot_3d.py  plot_3d_adv.py  pyproject.toml  scene.toml  simulation.toml  template.toml  tmp.py
crates/bevy_render_cli/: Cargo.toml
crates/bevy_render_cli/src/: bevy_render_cli.rs  lib.rs
crates/bevy_render_config/: Cargo.toml
crates/bevy_render_config/src/: lib.rs
crates/bevy_render_core/: Cargo.toml
crates/bevy_render_core/src/: beby_trait.rs  bevy_render_core.rs  lib.rs
crates/bevy_render_core/src/render_primitives/: mod.rs  render_infinite_cone.rs  render_plane.rs  render_sphere.rs
crates/raytracing_cli/: Cargo.toml
crates/raytracing_cli/src/: cli.rs  lib.rs
crates/raytracing_config/: Cargo.toml
crates/raytracing_config/src/: lib.rs  model.rs
crates/raytracing_config/src/model/: material_config.rs  object_config.rs  object_generator_config.rs  ray_config.rs  scene_config.rs  shape_config.rs  simulation_config.rs  (+1 more)
crates/raytracing_core/: Cargo.toml
crates/raytracing_core/src/: lib.rs  scene.rs
python_files/: main.py  plot.py  plot_3d_adv.py
src/: lib.rs  main.rs  scene.rs
src/config/: model.rs
src/config/model/: material_config.rs  object_config.rs  object_generator_config.rs  ray_config.rs  scene_config.rs  shape_config.rs  simulation_config.rs  simulation_settings_config.rs  transform_config.rs
src/primitives/: axis_aligned_box.rs  csg.rs  infinite_cone.rs  infinite_cylinder.rs  lens.rs  mod.rs  plane.rs  sphere.rs  transform.rs  wedge.rs
(+10 files in other folders)
