[package]
name = "raytracing"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.dependencies]
raytracing_core = { path = "./crates/raytracing_core" }
raytracing_config = { path = "./crates/raytracing_config" }
raytracing_cli = { path = "./crates/raytracing_cli" }
bevy_render_cli = {path = "./crates/bevy_render_cli"}
bevy_render_core = {path = "./crates/bevy_render_core"}
bevy_render_config = {path = "./crates/bevy_render_config"}

[dependencies]
csgrs = "0.20.1"
raytracing_cli.workspace = true
