[package]
name = "bevy_render_core"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = "0.16.1"
rand = "0.9.2"
glam = "0.29.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
raytracing_core.workspace = true
bevy_panorbit_camera = "0.27"
bevy_flycam = "0.16.1"
csgrs = { version = "0.20.1", features = ["bevymesh"] }